Some Bella fixes of spacing

--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -45,7 +45,7 @@ nav.navigation{
                 letter-spacing: 0;
                 text-align: left;
                 color: color('gray-6');
-                padding: 12px 32px;
+                padding: 12px 16px;
                 text-transform: uppercase;
             }
 
@@ -55,7 +55,7 @@ nav.navigation{
 
             a {
                 height: 40px;
-                padding: 8px 32px;
+                padding: 8px 16px;
                 display: flex;
                 text-align: left;
                 align-items: center;
@@ -98,7 +98,7 @@ nav.navigation{
             > li.dropdown{
                 &:last-child{
                     ul{
-                        margin-left: -60px;
+                        transform: translateX(-100px);
                     }
                 }
                 ul {
@@ -109,8 +109,12 @@ nav.navigation{
                     border-radius: 0 0 5px 5px;
                     padding: 12px 0;
                     z-index: 1;
-                    max-width: 230px;
+                    width: 195px;
+                    max-width: 195px;
 
+                    li a:hover{
+                        background-color: #F3F3F3;
+                    }
                 }
 
                 &:hover ul{
@@ -200,7 +204,7 @@ nav.navigation{
                 z-index: 2;
                 height: calc(100vh);
 
-                li a{
+                > li a{
                     margin-bottom: 16px;
                 }
 
@@ -210,17 +214,31 @@ nav.navigation{
                     width: 100%;
                     flex-grow: 1;
 
-                    li.heading, li a {
-                        padding: 8px 24px;
-                    }
+                    li{
+                        &.heading, a{
+                            padding: 8px 24px;
+                        }
 
-                    li.dropdown{
-                        > ul{
-                            &.collapsed{
-                                display: block;
+                        a{
+                            margin-bottom: 16px;
+                        }
 
-                                li a {
-                                    padding-left: 32px;
+                        &.divider{
+                            margin: 24px 0;
+                        }
+
+                        &.heading{
+                            margin-bottom: 8px;
+                        }
+
+                        &.dropdown{
+                            > ul{
+                                > li a{
+                                    margin-bottom: 0;
+                                }
+
+                                &.collapsed{
+                                    display: block;
                                 }
                             }
                         }
